refactor: add v1.0.0 and v2.0.0

--- a/vanilla-js/package.json
+++ b/vanilla-js/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "calculadora",
-    "version": "3.0.0",
+    "name": "calculadora-vanilla-js",
+    "version": "1.0.0",
     "description": "",
     "author": "Bruno Silva Santana",
     "license": "MIT"
